--- a/spring_boot_03_logging/src/main/resources/application.properties
+++ b/spring_boot_03_logging/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #将com.yp包下的日志级别设置为trace
-logging.level.com.atyp=trace
+#logging.level.com.atyp=trace
 
 
 #logging.path=
@@ -10,10 +10,10 @@ logging.level.com.atyp=trace
 #logging.file=G:/springboot.log
 
 # 在当前磁盘的根路径下创建spring文件夹和里面的log文件夹；使用spring.log作为默认文件
-logging.path=/spring/log
+#logging.path=/spring/log
 
 # 在控制台输出的日志的格式
-logging.pattern.console=
+#logging.pattern.console=
 
 # 指定文件中日志输出的格式
-logging.pattern.file=
+#logging.pattern.file=
